# anytype

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: release.yml
any-edit/: .cspell.json  CHANGELOG.md  Cargo.toml  README.md  justfile
any-edit/scripts/: README.md  raycast-edit-anytype.sh
any-edit/src/: logging.rs  main.rs
anyback/: .cspell.json  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  anyback.1.md
anyback/src/: archive.rs  lib.rs  main.rs  markdown.rs
anyback/src/cli/: auth.rs  decode.rs  mod.rs
anyback/src/cli/inspector/: app.rs  index.rs  keys.rs  mod.rs  ui.rs
anyback/tests/: e2e_backup_restore.rs  integrity_nightly.rs  object_generator.rs  p1_cross_space.rs  priority_groups.rs  restore_matrix.rs
anyr/: CHANGELOG.md  Cargo.toml  README.md  justfile
anyr/src/: crypto.rs  error.rs  filter.rs  main.rs
anyr/src/cli/: auth.rs  chat.rs  common.rs  file.rs  list.rs  member.rs  mod.rs  object.rs  property.rs  search.rs  space.rs  tag.rs  template.rs  types.rs  view.rs
anyr/src/output/: table.rs
anyr/testdata/go-testvec/: .gitignore  go.mod  go.sum  main.go
anyr/tests/: cli_commands.py
anytype-api/: .cspell.json  CHANGELOG.md  Cargo.toml  Keystores.md  README.md  Troubleshooting.md  _typos.toml  cspell.json  justfile
anytype-api/examples/: README.md  agenda.rs  chat_listener.rs  chat_messages.rs  create_object.rs  files.rs  filter_expressions.rs  filters_basic.rs  interactive_auth.rs  list_spaces.rs  list_tasks.rs  list_types_and_properties.rs  pagination_stream.rs  retry_eventual_consistency.rs  search_global.rs  search_in_space.rs  templates.rs  update_markdown_body.rs  update_object_properties.rs  views_list_objects.rs
anytype-api/examples/example_lib/: create_file_image.rs  create_file_pdf.rs  mod.rs  table.rs
anytype-api/src/: auth.rs  cache.rs  chat_stream.rs  chats.rs  client.rs  error.rs  files.rs  filters.rs  grpc_util.rs  http_client.rs  keystore.rs  lib.rs  members.rs  mock.rs  objects.rs  paged.rs  process_watcher.rs  properties.rs  search.rs  spaces.rs  tags.rs  templates.rs  test_util.rs  types.rs  validation.rs  verify.rs  views.rs
anytype-api/tests/: integration.rs  smoke_test.rs  test_cache.rs  test_chat_discovery.rs  test_chat_stream.rs  test_chats.rs  test_filters.rs  test_members.rs  test_pagination.rs  test_properties.rs  test_search.rs  test_tags.rs  test_types.rs  test_validation.rs  test_views.rs
anytype-api/tests/common/: mod.rs
anytype-cli/: CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cspell.json  justfile
anytype-cli/src/: config.rs  main.rs
anytype-cli/src/cli/: common.rs  config.rs  list.rs  member.rs  mod.rs  object.rs  property.rs  search.rs  space.rs  tag.rs  template.rs  types.rs  view.rs
anytype-cli/src/output/: mod.rs  table.rs
anytype-cli/tests/: cli_commands.py
anytype-rpc/: .cspell.json  .gitattributes  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  build.rs  justfile
anytype-rpc/pb/: README.md
anytype-rpc/src/: auth.rs  backup.rs  client.rs  config.rs  error.rs  lib.rs  views.rs
anytype-rpc/tools/gen-protos/: Cargo.toml
anytype-rpc/tools/gen-protos/src/: main.rs
scripts/: anytype-nonet  init-cli-keys.sh  prune-templates-keep-oldest.sh
