# Anytype Rust Tools and Clients
#
# SPDX-FileCopyrightText: 2025-2026 Steve Schoettler
# SPDX-License-Identifier: Apache-2.0
#
[workspace]
members = ["anytype-api", "anyr", "anytype-rpc", "any-edit"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
futures = "0.3"
parking_lot = "0.12.5"
prost-types = "0.14.3"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
sha2 = "0.10"
snafu = { version = "0.8.9" }
strum = { version = "0.27.2", features = ["derive"] }
test-log = { version = "0.2.19", features = ["log", "trace"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
