[package]
name = "any-edit"
version = "0.1.1"
edition = "2024"
description = "Edit Anytype documents in an external editor"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
repository = "https://github.com/stevelr/anytype"
license = "MIT OR Apache-2.0"
keywords = ["anytype", "raycast"]
categories = ["command-line-utilities"]
readme = "README.md"


[[bin]]
name = "any-edit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
anytype = { version = "0.2.8", path = "../anytype-api" }
clap.workspace = true
regex = "1.12"
serde.workspace = true
serde_yaml_ng = "=0.10.0"
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# For keyboard input simulation
enigo = "0.6.1"
# For clipboard access
arboard = "3.6"
