# anyback
#
# SPDX-FileCopyrightText: 2025-2026 Steve Schoettler
# SPDX-License-Identifier: Apache-2.0

[package]
name = "anyback"
version = "0.4.0-alpha.2"
edition = "2024"
description = "Backup and restore CLI for Anytype"
license = "Apache-2.0"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
repository = "https://github.com/stevelr/anytype"
homepage = "https://github.com/stevelr/anytype"
keywords = ["anytype", "backup", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "anyback"
required-features = ["cli"]

[lib]
name = "anyback_reader"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = [
  "dep:anytype",
  "dep:anytype-rpc",
  "dep:chrono",
  "dep:clap",
  "dep:crossterm",
  "dep:image",
  "dep:serde_json",
  "dep:prost-types",
  "dep:ratatui",
  "dep:ratatui-image",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:indicatif",
  "dep:tempfile",
  "dep:tonic",
  "dep:prost",
  "dep:lru",
  "dep:arboard",
]
# waiting on anytype-heart bug fix before re-enabling snapshot import mode
snapshot-import = []

[dependencies]
anyhow.workspace = true
anytype = { version = "0.3.2", path = "../anytype-api", features = ["grpc"], optional = true }
anytype-rpc = { version = "0.3.1", path = "../anytype-rpc", optional = true }
chrono = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
image = { version = "0.25.9", optional = true }
ratatui = { version = "0.30.0", optional = true }
ratatui-image = { version = "10.0.5", default-features = false, features = [
  "crossterm",
  "image-defaults",
  "tokio",
], optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
indicatif = { version = "0.18", optional = true }
tempfile = { version = "3.25.0", optional = true }
tonic = { version = "0.14.4", optional = true }
prost = { version = "0.14.3", optional = true }
lru = { version = "0.16.3", optional = true }
arboard = { version = "3.6", optional = true }
zip = "8.1.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.30.1", default-features = false, features = ["fs"] }

[dev-dependencies]
tempfile = "3.25.0"
rand = "0.9.2"
