# anyr
#
# SPDX-FileCopyrightText: 2025-2026 Steve Schoettler
# SPDX-License-Identifier: Apache-2.0
# 
[package]
name = "anyr"
version = "0.2.4"
edition = "2024"
description = "CLI for Anytype - list, search, and perform CRUD operations on Anytype objects."
license = "Apache-2.0"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
repository = "https://github.com/stevelr/anytype"
homepage = "https://github.com/stevelr/anytype"
keywords = ["anytype", "cli"]
categories = ["api-bindings"]
readme = "README.md"

[[bin]]
name = "anyr"

[dependencies]
anyhow.workspace = true
anytype = { version = "0.2.9", path = "../anytype-api", features = ["keystore-ext"] }
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
