# anyr
#
# SPDX-FileCopyrightText: 2025-2026 Steve Schoettler
# SPDX-License-Identifier: Apache-2.0
# 
[package]
name = "anyr"
version = "0.4.0"
edition = "2024"
description = "CLI for Anytype - list, search, and perform CRUD operations on Anytype objects."
license = "Apache-2.0"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
repository = "https://github.com/stevelr/anytype"
homepage = "https://github.com/stevelr/anytype"
keywords = ["anytype", "cli"]
categories = ["api-bindings"]
readme = "README.md"

[[bin]]
name = "anyr"

[dependencies]
anyhow.workspace = true
anytype = { version = "0.3.1", path = "../anytype-api", features = ["grpc"] }
base64 = "0.22"
bip39 = "2"
bs58 = "0.5"
clap.workspace = true
ed25519-dalek = "2"
futures.workspace = true
hmac = "0.12"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
hex = "0.4"
