# anytype
#
# SPDX-FileCopyrightText: 2025-2026 Steve Schoettler
# SPDX-License-Identifier: Apache-2.0
# 
[package]
name = "anytype"
version = "0.3.0"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
description = "An ergonomic Anytype API client in rust"
repository = "https://github.com/stevelr/anytype"
homepage = "https://github.com/stevelr/anytype"
edition = "2024"
license = "Apache-2.0"
keywords = ["anytype", "api", "client"]
categories = ["api-bindings"]
readme = "README.md"

[features]
default = ["grpc"]
# gRPC support
grpc = ["dep:anytype-rpc", "dep:tonic"]

[lib]
path = "src/lib.rs"

[dependencies]
db-keystore = { version = "0.2.1" }
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
keyring = { version = "4.0.0-beta.3" }
keyring-core = "0.7.2"
parking_lot.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true
anytype-rpc = { version = "0.2.1", path = "../anytype-rpc", optional = true }
tonic = { version = "0.14.2", optional = true }

[dev-dependencies]
png = "0.18"
serial_test = "3.3.1"
test-log.workspace = true
tiny-skia = "0.11"
markdown2pdf = "0.1.9"
anyhow.workspace = true
