# anytype
#
# SPDX-FileCopyrightText: 2025-2026 Steve Schoettler
# SPDX-License-Identifier: Apache-2.0
# 
[package]
name = "anytype"
version = "0.3.0"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
description = "An ergonomic Anytype API client in rust"
repository = "https://github.com/stevelr/anytype"
homepage = "https://github.com/stevelr/anytype"
edition = "2024"
license = "Apache-2.0"
keywords = ["anytype", "api", "client"]
categories = ["api-bindings"]
readme = "README.md"

[features]
default = ["grpc"]
# gRPC support
grpc = ["dep:anytype-rpc", "dep:tonic", "dep:tonic-prost"]

[lib]
path = "src/lib.rs"

[dependencies]
anytype-rpc = { version = "0.2.1", path = "../anytype-rpc", optional = true }
bytes.workspace = true
chrono.workspace = true
db-keystore = "0.3.1"
futures.workspace = true
keyring = "4.0.0-beta.3"
keyring-core = "0.7.2"
parking_lot.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tonic = { version = "0.14.2", optional = true }
tonic-prost = { version = "0.14.2", optional = true }
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
clap.workspace = true
png = "0.18"
serial_test = "3.3.1"
test-log.workspace = true
tiny-skia = "0.11"
markdown2pdf = "0.2.1"
anyhow.workspace = true
