[package]
name = "anyr"
version = "0.2.0"
edition = "2024"
description = "Anytype api client in rust, using anytype-api"
license = "MIT OR Apache-2.0"

[[bin]]
name = "anyr"

[dependencies]
anyhow.workspace = true
anytype = { path = "../anytype-api" }
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
